methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:4: error: ';' expected but '=' found.
    new versLAvant:Boolean=true
                          ^MethodsArgs:7: error: ';' expected but '=' found.
    new versLAvant:Boolean=false
                          ^