methods.args.MethodsArgs.scala.code
def move(nbPas:Int,versLAvant:Boolean): Int={
  if (getDirection()==Direction.NORTH){
    new versLAvant:Boolean=true
  }
  else{
    new versLAvant:Boolean=false
  }
	var Y:Int=0
  Y=getY()
  nbPas=6-Y
  if (versLAvant==true){
    for (i<- 0 to nbPas){
      avance()
    }
  }
  if(versLAvant==false){
    for (i<-0 to nbPas){
      recule()
    }
  }
}